--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -5,7 +5,7 @@ h1 {
   letter-spacing: -0.06rem;
 }
 
-form {
+.login-form {
   position: absolute;
   top: 20%;
   left: 25%;
@@ -77,6 +77,6 @@ input {
   margin-top: 20px;
 }
 
-form :nth-child(3) {
+.login-form :nth-child(3) {
   cursor: pointer;
 }
