--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -48,13 +48,14 @@ input {
   padding: .8rem;
 }
 
-.button {
+.sign-in-button {
   background: var(--brown);
   color: white;
   border: 0;
   font-family: var(--body-font);
   text-transform: uppercase;
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
+  margin-bottom: 10px;
   font-size: 1.0rem;
   letter-spacing: 0.1rem;
 }
